# advent-of-code

./: .gitignore  LICENSE  README.md  sonar-project.properties
2015 - Rust/: README.md
2015 - Rust/aoc01/: aoc01.rs
2015 - Rust/aoc03/: aoc03.rs
2015 - Rust/aoc04/: aoc04.rs
2015 - Rust/aoc05/: aoc05.rs
2018 - Java/aoc1/: aoc1.java
2018 - Java/nl/nlxdodge/aoc1/: AOC1.java
2018 - Java/nl/nlxdodge/aoc2/: AOC2.java
2018 - Java/nl/nlxdodge/aoc3/: AOC3.java
2018 - Java/nl/nlxdodge/aoc4/: AOC4.java
2019 - Ruby/: README.md  aoc_16.rb  aoc_1_ss.rb  aoc_2_ss.rb  aoc_3.rb  aoc_4_ss.rb  aoc_5.rb  aoc_6.rb  aoc_8_ss.rb  grid.txt
2020 - Python/: README.md  aoc_1.py  aoc_10.py  aoc_2.py  aoc_3.py  aoc_4.py  aoc_5.py  aoc_6.py  aoc_7.py  aoc_8.py  aoc_9.py
2020 - Python/helpers/: helpers.py
2020 - Python/input_files/: aoc_7_test.txt  aoc_8_input_correct.txt
2021 - Java/: .gitignore  README.md  pom.xml  test.java
2022 - Kotlin/: README.md  build.gradle.kts  settings.gradle.kts
2023 - Rust/: Cargo.toml  README.md
2023 - Rust/.devcontainer/: devcontainer.json
2023 - Rust/aoc02/: aoc02.rs
2023 - Rust/src/: aoc01.rs  aoc02.rs  aoc03.rs  aoc04.rs  aoc05.rs  aoc06.rs  aoc08.rs  aoc09.rs  aoc10.rs  aoc11.rs  main.rs
2023 - Rust/src/aoc01/: aoc01.rs
2023 - Rust/src/utils/: mod.rs
2023 - Rust/utils/: FileUtils.rs
2024 - GO/: README.md  go.mod  main.go
2024 - GO/src/: day.go
2024 - GO/src/day01/: day01.go
2024 - GO/src/day02/: day02.go
2024 - GO/src/util/: util.go
2024 - Java/Advent of Code 2024/: README.md  pom.xml
2025 - scala/: build.sbt
(+102 files in other folders)
