[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
num-integer = "0.1.45"
rayon = "1.8.0"
regex = "1.10.2"
substring = "1.4.5"

[profile.dev]
opt-level = 3
